--- a/chicago_crime_app/templates/index.html
+++ b/chicago_crime_app/templates/index.html
@@ -13,11 +13,22 @@
     <script src="https://kit.fontawesome.com/c3aba3a6dc.js"></script>
 
     <!-- Reference to Our CSS File -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Josefin+Sans:400,700&display=swap"
         rel="stylesheet">
+
+    <!-- Leaflet JS & CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+        integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+        crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+        integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+        crossorigin=""></script>
+
+    <!-- d3 JavaScript -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
 
     <title>Hello, world!</title>
@@ -147,101 +158,97 @@
                 </div>
             </div>
 
-        
-        <div class="col-sm-6">
-            <div class="input-group mb-3">
-                <select class="custom-select" id="inputGroupSelect02">
-                    <option selected>Choose...</option>
-                    <option value="1">40º F</option>
-                    <option value="2">50º F</option>
-                    <option value="3">60º F</option>
-                    <option value="3">70º F</option>
-                    <option value="3">80º F</option>
-                    <option value="3">90º F</option>
-                    <option value="3">100º F</option>
-                </select>
-                <div class="input-group-append">
-                    <label class="input-group-text" for="inputGroupSelect02">Temperature</label>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="card text-center">
-                <div class="card-body">
-                    <p class="card-text prediction">101 Incidents</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card text-center">
-                <div class="card-body">
-                    <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card text-center">
-                <div class="card-body">
-                    <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
 
-    <div class="row">
-        <div class="col-sm-12">
-            <h2>Data & Statistics</h2>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="input-group mb-3">
-                <select class="custom-select" id="inputGroupSelect02">
-                    <option selected>Choose...</option>
-                    <option value="1">All Crimes</option>
-                    <option value="1">Arsen</option>
-                    <option value="2">Burglary</option>
-                    <option value="3">Battary</option>
-                </select>
-                <div class="input-group-append">
-                    <label class="input-group-text" for="inputGroupSelect02">Crime</label>
+            <div class="col-sm-6">
+                <div class="input-group mb-3">
+                    <select class="custom-select" id="inputGroupSelect02">
+                        <option selected>Choose...</option>
+                        <option value="1">40º F</option>
+                        <option value="2">50º F</option>
+                        <option value="3">60º F</option>
+                        <option value="3">70º F</option>
+                        <option value="3">80º F</option>
+                        <option value="3">90º F</option>
+                        <option value="3">100º F</option>
+                    </select>
+                    <div class="input-group-append">
+                        <label class="input-group-text" for="inputGroupSelect02">Temperature</label>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <br>
-
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card text-center">
-                <div class="card-body">
-                    <p class="card-text prediction">PLACEHOLDER FOR Map</p>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text prediction">101 Incidents</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
-            <div class="card text-center">
-                <div class="card-body">
-                    <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
+        <br>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <br>
+        <br>
 
-    <div class="row">
-        <div class="col-sm-12">
-            <h2>Descriptions and Sources</h2>
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Data & Statistics</h2>
+            </div>
         </div>
-    </div>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="input-group mb-3">
+                    <select class="custom-select" id="inputGroupSelect02">
+                        <option selected>Choose...</option>
+                        <option value="1">All Crimes</option>
+                        <option value="1">Arsen</option>
+                        <option value="2">Burglary</option>
+                        <option value="3">Battary</option>
+                    </select>
+                    <div class="input-group-append">
+                        <label class="input-group-text" for="inputGroupSelect02">Crime</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div id="map"></div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card text-center">
+                    <div class="card-body">
+                        <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Descriptions and Sources</h2>
+            </div>
+        </div>
 
 
 
@@ -252,7 +259,10 @@
     </div>
     <br>
 
-
+    <!-- API key -->
+    <script type="text/javascript" src="../static/js/config.js"></script>
+    <!-- JS  -->
+    <script type="text/javascript" src="../static/js/staticmap.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
