--- a/chicago_crime_app/templates/index.html
+++ b/chicago_crime_app/templates/index.html
@@ -81,14 +81,11 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="input-group mb-3">
-                    <select class="custom-select" id="inputGroupSelect02">
+                    <select class="custom-select" id="forecastcrime">
                         <option selected>Choose...</option>
-                        <option value="1">Arsen</option>
-                        <option value="2">Burglary</option>
-                        <option value="3">Battary</option>
                     </select>
                     <div class="input-group-append">
-                        <label class="input-group-text" for="inputGroupSelect02">Crime</label>
+                        <label class="input-group-text" for="forecastcrime">Crime</label>
                     </div>
                 </div>
             </div>
@@ -146,14 +143,11 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="input-group mb-3">
-                    <select class="custom-select" id="inputGroupSelect02">
+                    <select class="custom-select" id="predictorcrime">
                         <option selected>Choose...</option>
-                        <option value="1">Arsen</option>
-                        <option value="2">Burglary</option>
-                        <option value="3">Battary</option>
                     </select>
                     <div class="input-group-append">
-                        <label class="input-group-text" for="inputGroupSelect02">Crime</label>
+                        <label class="input-group-text" for="predictorcrime">Crime</label>
                     </div>
                 </div>
             </div>
@@ -214,15 +208,11 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="input-group mb-3">
-                    <select class="custom-select" id="inputGroupSelect02">
+                    <select class="custom-select" id="staticcrime">
                         <option selected>Choose...</option>
-                        <option value="1">All Crimes</option>
-                        <option value="1">Arsen</option>
-                        <option value="2">Burglary</option>
-                        <option value="3">Battary</option>
                     </select>
                     <div class="input-group-append">
-                        <label class="input-group-text" for="inputGroupSelect02">Crime</label>
+                        <label class="input-group-text" for="staticcrime">Crime</label>
                     </div>
                 </div>
             </div>
@@ -263,6 +253,7 @@
     <script type="text/javascript" src="../static/js/config.js"></script>
     <!-- JS  -->
     <script type="text/javascript" src="../static/js/staticmap.js"></script>
+    <script type="text/javascript" src="../static/js/dropdown.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
