--- a/chicago_crime_app/templates/index.html
+++ b/chicago_crime_app/templates/index.html
@@ -74,24 +74,17 @@
     </div>
 
 
+    
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h2 id="crimeforecastheader">3-Day Crime Forecast</h2>
+                <h2 id="crimeforecastheader">Crime Forecast</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="input-group mb-3">
-                    <select class="custom-select" id="forecastcrime">
-                        <option selected>Choose...</option>
-                    </select>
-                    <div class="input-group-append">
-                        <label class="input-group-text" for="forecastcrime">Crime</label>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+        
+
 
 
         <div class="row">
@@ -124,97 +117,27 @@
             </div>
         </div>
         <br>
-        <div class="row" id="crimepredictorheader">
-            <div class="col-sm-12">
-                <h2>Crime Predictor</h2>
-            </div>
-        </div>
+
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="input-group mb-3">
                     <select class="custom-select" id="predictorcrime">
                         <option selected>Choose...</option>
+                        <option>Day 1</option>
+                        <option>Day 2</option>
+                        <option>Day 3</option>
                     </select>
                     <div class="input-group-append">
-                        <label class="input-group-text" for="predictorcrime">Crime</label>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-6">
-                <div class="input-group mb-3">
-                    <select class="custom-select" id="inputGroupSelect02">
-                        <option selected>Choose...</option>
-                        <option value="1">40º F</option>
-                        <option value="2">50º F</option>
-                        <option value="3">60º F</option>
-                        <option value="3">70º F</option>
-                        <option value="3">80º F</option>
-                        <option value="3">90º F</option>
-                        <option value="3">100º F</option>
-                    </select>
-                    <div class="input-group-append">
-                        <label class="input-group-text" for="inputGroupSelect02">Temperature</label>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <p class="card-text prediction">101 Incidents</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <p class="card-text prediction">PLACEHOLDER FOR GRAPH</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-
-        <div class="row">
-            <div class="col-md-12">
-                <h2 id="statisticsheader">Data & Statistics</h2>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <div class="input-group mb-3">
-                    <select class="custom-select" id="staticcrime">
-                        <option selected>Choose...</option>
-                    </select>
-                    <div class="input-group-append">
-                        <label class="input-group-text" for="staticcrime">Crime</label>
+                        <label class="input-group-text" for="predictorcrime">Day</label>
                     </div>
                 </div>
             </div>
         </div>
 
         <br>
-
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div id="map"></div>
-            </div>
-            <div class="col-md-6">
-                <div id="pie"></div>
             </div>
         </div>
         <br>
@@ -242,16 +165,53 @@
                 </ul>
             </div>
         </div>
+
+
+        <div class="row">
+            <div class="col-md-12">
+                <h2 id="statisticsheader">Data & Statistics</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="input-group mb-3">
+                    <select class="custom-select" id="staticcrime">
+                        <option selected>Choose...</option>
+                    </select>
+                    <div class="input-group-append">
+                        <label class="input-group-text" for="staticcrime">Crime</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div id="map"></div>
+            </div>
+            <div class="col-md-6">
+                <div id="plot"></div>
+            </div>
+        </div>
+        <br>
+
+       
     </div>
     <br>
 
 
+    <!-- Plotly Leave it first or it breaks the JS -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- JS  -->
     <script type="text/javascript" src="../static/js/staticgraph.js"></script>
     <script type="text/javascript" src="../static/js/config.js"></script>
     <script type="text/javascript" src="../static/js/staticmap.js"></script>
     <script type="text/javascript" src="../static/js/dropdown.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -263,6 +223,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+
+
 </body>
 
 </html>
