--- a/chicago_crime_app/static/css/style.css
+++ b/chicago_crime_app/static/css/style.css
@@ -17,12 +17,13 @@
 
 
 .jumbotron-fluid{
-    color:rgb(158, 18, 8);
+    color:rgb(254, 4, 5);
     margin-top: 70px;
-    background-image: url("../img/chicago-2858987_960_720.png");
+    background-image: url("../img/blueback.png");
     background-position: top;
     text-align: center;
     padding-top: 30px;
+    text-transform: uppercase;
 }
 
 h1 {
@@ -31,7 +32,7 @@ h1 {
 
 h2 {
     font-family: 'Arvo', serif;
-    color:rgb(158, 18, 8);
+    color:rgb(254, 4, 5);
 }
 
 
@@ -47,5 +48,18 @@ a.nav-link:hover  {
 #map,
 body,
 html {
+  height: 800px;
+}
+
+
+#map2,
+body,
+html {
   height: 500px;
+}
+
+.svg-container,
+body,
+html {
+  height: 100%;
 }
