--- a/chicago_crime_app/templates/index.html
+++ b/chicago_crime_app/templates/index.html
@@ -37,7 +37,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="../static/img/logo.jpg" width="80" height="50"  alt="">
+            <img src="../static/img/logo.jpg" width="80" height="50" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,15 +47,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#By Day">By Day<span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#By Day">By Day<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#map">By Area<span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#map">By Area<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#statisticsheader">Sources & Process<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#statisticsheader">Sources & Process<span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#dataheader">Data & Statistics<span class="sr-only">(current)</span></a>
@@ -76,7 +75,7 @@
     </div>
 
 
-    
+
 
     <div class="container">
         <div class="row">
@@ -85,7 +84,7 @@
             </div>
         </div>
 
-        
+
 
 
 
@@ -93,6 +92,7 @@
             <div class="col-md-4">
                 <div class="card text-center">
                     <div class="card-body ">
+                        <p class="card-text">July 22, 2019</p>
                         <i class="fas fa-sun fa-5x"></i>
                         <h5 class="card-title card-degrees">80º F</h5>
                         <p class="card-text">31 Incidents</p>
@@ -102,6 +102,7 @@
             <div class="col-md-4">
                 <div class="card text-center">
                     <div class="card-body">
+                        <p class="card-text">July 23, 2019</p>
                         <i class="fas fa-cloud-showers-heavy fa-5x"></i>
                         <h5 class="card-title card-degrees">65º F</h5>
                         <p class="card-text">78 Incidents</p>
@@ -111,6 +112,7 @@
             <div class="col-md-4">
                 <div class="card text-center">
                     <div class="card-body">
+                        <p class="card-text">July 24, 2019</p>
                         <i class="fas fa-cloud-sun fa-5x"></i>
                         <h5 class="card-title card-degrees">65º F</h5>
                         <p class="card-text">78 Incidents</p>
@@ -172,6 +174,8 @@
         <div class="row">
             <div class="col-md-12">
                 <h2 id="statisticsheader">Data & Statistics</h2>
+                <p>Use the dropdown below to explore historical instances of particular crimes in the City of Chicago.
+                    This underlying data from 2010 to 2019 is the basis for the predictive model above.</p>
             </div>
         </div>
 
@@ -200,7 +204,7 @@
         </div>
         <br>
 
-       
+
     </div>
     <br>
 
