re-do data source with mysql instead of sql lite

--- a/chicago_crime_app/templates/index.html
+++ b/chicago_crime_app/templates/index.html
@@ -164,7 +164,8 @@
                 <ul>
                     <li>City of Chicago Crime API</li>
                     <li>Open Weather</li>
-                    <li>ML Library</li>
+                    <li>TensorFlow</li>
+                    <li>Scikit</li>
 
                 </ul>
             </div>
