Adjusted paths to prep for predictive data

--- a/chicago_crime_app/templates/index.html
+++ b/chicago_crime_app/templates/index.html
@@ -123,16 +123,26 @@
         <br>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="input-group mb-3">
-                    <select class="custom-select" id="predictorcrime">
+                    <select class="custom-select" id="predictorday">
                         <option selected>Choose...</option>
                         <option>Day 1</option>
                         <option>Day 2</option>
                         <option>Day 3</option>
                     </select>
                     <div class="input-group-append">
-                        <label class="input-group-text" for="predictorcrime">Day</label>
+                        <label class="input-group-text" for="predictorday">Day</label>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="input-group mb-3">
+                    <select class="custom-select" id="forecastcrime">
+                        <option selected>ASSAULT</option>
+                    </select>
+                    <div class="input-group-append">
+                        <label class="input-group-text" for="predictorcrime">Crime</label>
                     </div>
                 </div>
             </div>
